Bug 240489 - Wrong file permissions when attachments copied to filesystem using drag and drop
Summary: Wrong file permissions when attachments copied to filesystem using drag and drop
Status: RESOLVED FIXED
Alias: None
Product: kmail
Classification: Unmaintained
Component: messageviewer (other bugs)
Version First Reported In: 1.13.3
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-06-02 18:58 UTC by Paul Worrall
Modified: 2012-06-27 17:40 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.5
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Paul Worrall 2010-06-02 18:58:12 UTC
Version:           1.13.3 (using KDE 4.4.3) 
OS:                Linux

Saving an attachment using Drag and Drop to Dolphin copies the attachment with incorrect permissions.  Using "Save As" gives the expected permissions.

Reproducible: Always

Steps to Reproduce:
1. Receive an email with an attachment (tested with a jpeg)
2. Drag the attachment to a folder in Dolphin

Actual Results:  
Attachment is copied with 0400 permissions (-r--------)

Expected Results:  
Attachment is copied with 0644 permissions (-rw-rw-r--). umask is 0002

OS: Linux (i686) release 2.6.32-22-generic
Compiler: cc
Comment 1 Björn Ruberg 2010-08-08 16:44:33 UTC
Cannot reproduce with KDE 4.4.5. Permissions are fine.
Comment 2 Paul Worrall 2010-08-08 19:14:50 UTC
Can reproduce with KDE 4.4.5. Permissions not fine.
Comment 3 Paul Worrall 2011-12-28 09:26:32 UTC
Can still reproduce with KDE 4.7.4
Comment 4 Paul Worrall 2012-06-24 08:52:51 UTC
Yawn... still reproducible in 4.8.3

Slight change: drag-and-drop gives 0500 permissions now; "Save As" give the expected 0644
Comment 5 Laurent Montel 2012-06-26 14:18:58 UTC
How do you dnd ?
dnd from treeview in messageviewer ? or from link ?
Comment 6 Paul Worrall 2012-06-26 16:52:12 UTC
From the message preview pane or if I open the email in a seperate window and I drag the attachment from the message body or the header onto my home folder in Dolphin always the same 0500 permissions
Comment 7 Laurent Montel 2012-06-26 17:07:32 UTC
OK I can confirm it.
Will look at how to fix it
Comment 8 Laurent Montel 2012-06-26 17:18:47 UTC
I have 600 not 500 here.
"-rw-------"
Comment 9 Laurent Montel 2012-06-27 17:38:29 UTC
Git commit ae91f6214e146dc0f1ad0d7a7a66eff06effa3f9 by Montel Laurent.
Committed on 27/06/2012 at 19:37.
Pushed by mlaurent into branch 'master'.

Fix Bug 240489 - Wrong file permissions when attachments copied to

filesystem using drag and drop
FIXED-IN: 4.8.5

M  +3    -1    messageviewer/urlhandlermanager.cpp

http://commits.kde.org/kdepim/ae91f6214e146dc0f1ad0d7a7a66eff06effa3f9
Comment 10 Laurent Montel 2012-06-27 17:39:28 UTC
Git commit fe855358a3f4c812e2398ac7f6ad5fb1df705d69 by Montel Laurent.
Committed on 27/06/2012 at 19:37.
Pushed by mlaurent into branch 'KDE/4.8'.

Fix Bug 240489 - Wrong file permissions when attachments copied to

filesystem using drag and drop
FIXED-IN: 4.8.5
(cherry picked from commit ae91f6214e146dc0f1ad0d7a7a66eff06effa3f9)

M  +3    -1    messageviewer/urlhandlermanager.cpp

http://commits.kde.org/kdepim/fe855358a3f4c812e2398ac7f6ad5fb1df705d69
Comment 11 Laurent Montel 2012-06-27 17:40:06 UTC
Git commit 9c5c26fc6d98915166969956df0be3b3d62c64a6 by Montel Laurent.
Committed on 27/06/2012 at 19:37.
Pushed by mlaurent into branch 'KDE/4.9'.

Fix Bug 240489 - Wrong file permissions when attachments copied to

filesystem using drag and drop
FIXED-IN: 4.8.5
(cherry picked from commit ae91f6214e146dc0f1ad0d7a7a66eff06effa3f9)

M  +3    -1    messageviewer/urlhandlermanager.cpp

http://commits.kde.org/kdepim/9c5c26fc6d98915166969956df0be3b3d62c64a6