Fix Bug 240489 - Wrong file permissions when attachments copied to

filesystem using drag and drop
FIXED-IN: 4.8.5
BUG: 240489
(cherry picked from commit ae91f6214e146dc0f1ad0d7a7a66eff06effa3f9)